# dev_ws

./: .gitignore  Dockerfile  EtapasInstallDesktop.md  README.md  add.txt  frames_2023-11-21_12.06.51.gv  lidar.sh  log.txt  teleop.sh  teste.py  untitled.md
bag_files/: log.txt
bag_files/rosbag2_2023_11_17-13_04_05/: metadata.yaml  rosbag2_2023_11_17-13_04_05_0.db3
config/: bashrc
dev_ws/script/: desktop.sh  gazebo.sh  lidar.sh  ros2_control.sh  teleop.sh
dev_ws/src/diff_drive_controller/src/: diff_drive_controller.cpp  diff_drive_controller_parameter.yaml
dev_ws/src/sobot_drive/: CMakeLists.txt  README.md  package.xml
dev_ws/src/sobot_drive/bringup/config/: my_nav_to_pose_bt.xml  nav2_params.yaml  solis_save_map.yaml
dev_ws/src/sobot_drive/bringup/launch/: rplidar.launch.py
dev_ws/src/sobot_drive/description/ros2_control/: diffbot.ros2_control.xacro
dev_ws/src/sobot_drive/description/urdf/: lidar.xacro
dev_ws/src/sobot_drive/hardware/: diffbot_system.cpp
dev_ws/src/sobot_drive/hardware/include/sobot_drive/: diffbot_system.hpp
dev_ws/src/sobot_gazebo/config/: my_controllers.yaml  serial_map_gz.data  twist_mux.yaml
dev_ws/src/sobot_gazebo/launch/: online_async_launch.py
dev_ws/src/teleop_twist_keyboard_sobot/: package.xml
install/: local_setup.sh  setup.sh
install/test_node/lib/test_node/: talker
script/: desktop.sh  gazebo.sh
src/sobot_drive/: CMakeLists.txt  sobot_drive.xml
src/sobot_drive/doc/: userdoc.rst
src/sobot_drive/hardware/: diffbot_system.cpp
src/sobot_gazebo/: CMakeLists.txt  package.xml
src/sobot_gazebo/config/: mapper_params_online_async.yaml  nav2_params.yaml  saved_map.pgm  saved_map.yaml  serial map.data  serialized_map.data
src/sobot_gazebo/launch/: launch_sim.launch.py  navigation_launch.py  rsp.launch.py
src/sobot_gazebo/worlds/: world1.world
src/teleop_twist_keyboard_sobot/: setup.cfg  setup.py
src/teleop_twist_keyboard_sobot/teleop_twist_keyboard_sobot/: teleop_twist_keyboard_sobot.py
(+470 files in other folders)
